--- a/OICAR-WebApp/Pages/_ViewImports.cshtml
+++ b/OICAR-WebApp/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using OICAR_WebApp
-@namespace OICAR_WebApp.Pages
+﻿@using UI
+@namespace UI.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
